--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-JOINCODE=fc94:b01d:1803:8dd8:b293:5c7d:7639:932a/JS9R2Bf7xRedqaREyPGGPg
+HUSARNET_JOIN_CODE=fc94:b01d:1803:8dd8:b293:5c7d:7639:932a/JS9R2Bf7xRedqaREyPGGPg
+HUSARNET_HOSTNAME=talker
+ROS_DOMAIN_ID=10
