--- a/compose.talker.yaml
+++ b/compose.talker.yaml
@@ -3,26 +3,33 @@ version: '3.8'
 services:
 
     ros2router:
-        image: husarnet/ros2router:1.6.0
+        build: 
+            context: ./ros2router
+            dockerfile: Dockerfile
         restart: unless-stopped
         volumes: 
             - ./filter.yaml:/filter.yaml
         environment:
             - EXIT_IF_HOST_TABLE_CHANGED=TRUE # if new Husarnet peer is detected restart the DDS Router to apply a new initial-peers config
             - ROS_LOCALHOST_ONLY=0 # enables ROS2 Router local LAN participant
+              # set in .env file
+            - ROS_DOMAIN_ID
         network_mode: host
 
     talker:
         build: 
-            context: ./
+            context: ./talker
             dockerfile: Dockerfile
         devices:
             - /dev/net/tun
         volumes:
             - /var/lib/husarnet:/var/lib/husarnet
         environment:
-            - HUSARNET_JOIN_CODE=${HUSARNET_JOIN_CODE}
-            - HUSARNET_HOSTNAME=${HUSARNET_HOSTNAME}
+            - RMW_IMPLEMENTATION=rmw_cyclonedds_cpp
+              # set in .env file
+            - HUSARNET_JOIN_CODE
+            - HUSARNET_HOSTNAME
+            - ROS_DOMAIN_ID
         cap_add:
             - NET_ADMIN
         network_mode: host
