--- a/compose.talker.yaml
+++ b/compose.talker.yaml
@@ -8,7 +8,7 @@ services:
             dockerfile: Dockerfile
         restart: unless-stopped
         volumes: 
-            - ./filter.yaml:/filter.yaml
+            - ./ros2router/filter.yaml:/filter.yaml
         environment:
             - EXIT_IF_HOST_TABLE_CHANGED=TRUE # if new Husarnet peer is detected restart the DDS Router to apply a new initial-peers config
             - ROS_LOCALHOST_ONLY=0 # enables ROS2 Router local LAN participant
