--- a/compose.talker.yaml
+++ b/compose.talker.yaml
@@ -33,4 +33,4 @@ services:
         cap_add:
             - NET_ADMIN
         network_mode: host
-        command: ros2 run demo_nodes_cpp talker
+        command: ros2 run demo_nodes_cpp add_two_ints_server
